--- a/VhallAndroidSDKLiveDemo/app/build.gradle
+++ b/VhallAndroidSDKLiveDemo/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.vhall.live"
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0"
+        versionCode 253
+        versionName "2.5.3"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -17,15 +17,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:22.0.+'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile(name:'vhallsdk2.5.3',ext:'aar')
     compile('io.socket:socket.io-client:0.8.0') {
         exclude group: 'org.json', module: 'json'
     }
-    compile files('libs/vhallsdk2.5.0.jar')
-    compile files('libs/vhallbusiness2.5.0.jar')
 }
