--- a/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
             android:name=".MainActivity"
             android:icon="@drawable/icon_vhall"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:screenOrientation="portrait"></activity>
 
         <activity
