--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -26,16 +26,23 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.+'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile('io.socket:socket.io-client:0.8.3') {
+    compile "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
+    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+    compile("io.socket:socket.io-client:${SOCKET_IO_VERSION}") {
         exclude group: 'org.json', module: 'json'
     }
-    compile(name: 'vhallsdk3.0', ext: 'aar')
-    dependencies {
-        compile 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
-        compile 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
-        compile 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
-        compile 'com.github.ctiao:ndkbitmap-x86:0.6.4'
-    }
+    compile(name: 'vhallsdk3.0.1', ext: 'aar')
+    compile 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
+    compile 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
+    compile 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
+    compile 'com.github.ctiao:ndkbitmap-x86:0.6.4'
+
+    /*vhall-support包依赖*/
+    compile files('libs/vhallsdk_support1.0.jar')
+    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.1.8.v20121106'
+    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '8.1.8.v20121106'
+    compile group: 'org.eclipse.jetty', name: 'jetty-client', version: '8.1.8.v20121106'
+    compile group: 'org.fourthline.cling', name: 'cling-core', version: '2.1.1'
+    compile group: 'org.fourthline.cling', name: 'cling-support', version: '2.1.1'
+
 }
