--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -29,8 +29,7 @@
         <activity
             android:name=".watch.WatchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            android:label="@string/app_name"></activity>
 
         <service android:name="org.fourthline.cling.android.AndroidUpnpServiceImpl"/>
     </application>
