--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.library'
+//apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
-
+    compileSdkVersion 26
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
     }
@@ -25,22 +24,17 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
-    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
-    compile("io.socket:socket.io-client:${SOCKET_IO_VERSION}") {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
+    api "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+    api("io.socket:socket.io-client:${SOCKET_IO_VERSION}") {
         exclude group: 'org.json', module: 'json'
     }
-    compile(name: 'vhallsdk3.0.3.1', ext: 'aar')
-    compile 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
-    compile 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
-    compile 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
-    compile 'com.github.ctiao:ndkbitmap-x86:0.6.4'
+    api(name: 'vhallsdk3.1.0.1', ext: 'aar')
+    implementation 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
+    implementation 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
+    implementation 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
+    implementation 'com.github.ctiao:ndkbitmap-x86:0.6.4'
 
-    compile group: 'org.eclipse.jetty', name: 'jetty-server', version: '8.1.8.v20121106'
-    compile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '8.1.8.v20121106'
-    compile group: 'org.eclipse.jetty', name: 'jetty-client', version: '8.1.8.v20121106'
-    compile group: 'org.fourthline.cling', name: 'cling-core', version: '2.1.1'
-    compile group: 'org.fourthline.cling', name: 'cling-support', version: '2.1.1'
 
 }
