--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -24,13 +24,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
     api "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
     api("io.socket:socket.io-client:${SOCKET_IO_VERSION}") {
         exclude group: 'org.json', module: 'json'
     }
-    api(name: 'vhallsdk3.1.0.1', ext: 'aar')
     implementation 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
     implementation 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
     implementation 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
