--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
 
+        <activity
+            android:name=".interactive.InteractiveActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
+
         <service android:name="org.fourthline.cling.android.AndroidUpnpServiceImpl" />
     </application>
 
