--- a/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:name=".VhallApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
+        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -23,21 +24,20 @@
             android:name=".LoginActivity"
             android:icon="@drawable/icon_vhall"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".MainActivity"
             android:icon="@drawable/icon_vhall"
             android:label="@string/app_name"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".SetParamActivity"
             android:icon="@drawable/icon_vhall"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
-
+            android:screenOrientation="portrait"/>
 
     </application>
 </manifest>
