--- a/VhallAndroidSDKLiveDemo/build.gradle
+++ b/VhallAndroidSDKLiveDemo/build.gradle
@@ -1,27 +1,31 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
-    repositories {
-        jcenter()
-        google()
-    }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0'
+    }
+    repositories {
+        mavenCentral()
+        google()
+        jcenter()
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
-        google()
-    }
-    repositories {
         mavenCentral()
+        google()
         maven {
             url 'http://4thline.org/m2'
+        }
+        jcenter()
+
+    }
+
+    tasks.withType(Javadoc) {
+        options {
+            encoding "UTF-8"
+            charSet 'UTF-8'
+            links "http://docs.oracle.com/javase/7/docs/api"
         }
     }
 }
