--- a/VhallAndroidSDKLiveDemo/gradle.properties
+++ b/VhallAndroidSDKLiveDemo/gradle.properties
@@ -15,8 +15,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+android.injected.testOnly=false
 
 
-SOCKET_IO_VERSION=0.9.0
+SOCKET_IO_VERSION=1.0.0
 GLIDE_VERSION = 3.7.0
-SUPPORT_VERSION = 26.0.+
+SUPPORT_VERSION = 28.0.0
