--- a/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
@@ -1,13 +1,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vhall.live">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".VhallApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -38,6 +39,9 @@
             android:icon="@drawable/icon_vhall"
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
+        <activity android:name=".webWatch.WebViewActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:hardwareAccelerated="true"/>
 
     </application>
 </manifest>
