--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 
         <activity
             android:name=".broadcast.BroadcastActivity"
-            android:configChanges="keyboardHidden|screenSize"
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"></activity>
         <activity
             android:name=".watch.WatchActivity"
