--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -40,13 +40,20 @@ dependencies {
     implementation 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
     implementation 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
     implementation 'com.github.ctiao:ndkbitmap-x86:0.6.4'
+
+    //投屏相关
+    api 'org.eclipse.jetty:jetty-server:8.1.8.v20121106'
+    api 'org.eclipse.jetty:jetty-servlet:8.1.8.v20121106'
+    api 'org.eclipse.jetty:jetty-client:8.1.8.v20121106'
+    api 'org.fourthline.cling:cling-core:2.1.1'
+    api 'org.fourthline.cling:cling-support:2.1.1'
+
     //VssSDK
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.alibaba:fastjson:1.2.47'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation "io.reactivex.rxjava2:rxjava:2.2.6"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-    implementation 'com.android.support:multidex:1.0.3'
     implementation 'org.ligboy.retrofit2:converter-fastjson-android:2.1.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
 }
