--- a/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.vhall.live">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -7,10 +8,11 @@
         android:name=".VhallApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
-        android:usesCleartextTraffic="true"
+        tools:overrideLibrary="com.vhall.core"
         android:hardwareAccelerated="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".SplashActivity"
             android:icon="@drawable/icon_vhall"
@@ -39,8 +41,14 @@
             android:icon="@drawable/icon_vhall"
             android:label="@string/app_name"
             android:screenOrientation="portrait"/>
+
+        <activity
+            android:name=".LiveListActivity"
+            android:screenOrientation="portrait"/>
+
         <activity android:name=".webWatch.WebViewActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="sensor"
             android:hardwareAccelerated="true"/>
 
     </application>
