--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -30,10 +30,10 @@ tasks.withType(JavaCompile) {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar','*.aar'])
     implementation "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
-    api "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+    api "com.github.bumptech.glide:glide:4.8.0"
     //SaaSSDK
-    api 'com.vhall.android.library:vh-saas-sdk:5.0.0'
-    api 'com.vhall.android.library:vh-saas-interactive:5.0.0'
+    api 'com.vhall.android.library:vh-saas-sdk:5.0.1'
+    api 'com.vhall.android.library:vh-saas-interactive:5.1.1'
     //投屏相关
     api 'com.vhall.android.library:vh-saas-sdk-support:2.0.0'
 
