--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
             android:screenOrientation="portrait"></activity>
 
         <activity
+            android:name=".watch.VWatchActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
             android:name=".interactive.InteractiveActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
