添加跑马灯 文档放大功能

--- a/VhallAndroidSDKLiveDemo/build.gradle
+++ b/VhallAndroidSDKLiveDemo/build.gradle
@@ -13,11 +13,16 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
 
         maven {url 'http://4thline.org/m2'}
         maven {url 'https://dl.bintray.com/tiandiyinghun/maven'}
+
+        maven {url 'https://s01.oss.sonatype.org/content/repositories/releases/'}
+
+        maven {url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'}
     }
 
     tasks.withType(Javadoc) {
