--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -31,10 +31,11 @@ tasks.withType(JavaCompile) {
 
 repositories {
     dependencies {
+        implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
         implementation "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
         api "com.github.bumptech.glide:glide:4.8.0"
-        api 'com.github.vhall.android.library:vh-saas-sdk:6.1.0'
-        api 'com.github.vhall.android.library:vh-saas-interactive:6.1.0'
+        api 'com.github.vhall.android.library:vh-saas-sdk:6.1.2'
+        api 'com.github.vhall.android.library:vh-saas-interactive:6.1.2'
         api 'com.github.vhall.android.library:vh-saas-sdk-support:2.0.1'
 
         implementation 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
@@ -45,7 +46,6 @@ repositories {
         implementation 'com.android.support:recyclerview-v7:28.0.0'
         api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
         api 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
-
     }
     mavenCentral()
 }
