--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".watch.WatchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:windowSoftInputMode="adjustNothing"
             android:label="@string/app_name"
             android:screenOrientation="portrait"></activity>
         <activity
