--- a/VhallAndroidSDKLiveDemo/build.gradle
+++ b/VhallAndroidSDKLiveDemo/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.1.0'
     }
     repositories {
-        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
         mavenCentral()
         google()
         jcenter()
