--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -33,9 +33,11 @@ repositories {
     dependencies {
         implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
         implementation "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
+
+        implementation "com.android.support:support-compat:28.0.0"
         api "com.github.bumptech.glide:glide:4.8.0"
-        api 'com.github.vhall.android.library:vh-saas-sdk:6.2.2'
-        api 'com.github.vhall.android.library:vh-saas-interactive:6.2.2'
+        api 'com.github.vhall.android.library:vh-saas-sdk:6.2.3'
+        api 'com.github.vhall.android.library:vh-saas-interactive:6.2.3'
         api 'com.github.vhall.android.library:vh-saas-sdk-support:2.0.1'
 
         implementation 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
