--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 28
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 28
-        versionCode 621
-        versionName "6.2.1"
+        versionCode 630
+        versionName "6.3.0"
     }
     buildTypes {
         release {
@@ -19,10 +19,10 @@ android {
     lintOptions {
         abortOnError false
     }
-}
-
-dependencies {
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 tasks.withType(JavaCompile) {
@@ -31,15 +31,16 @@ tasks.withType(JavaCompile) {
 
 repositories {
     dependencies {
-        implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
+        implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
         implementation "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
+//        api "com.github.bumptech.glide:glide:4.8.0"
 
         implementation "com.android.support:support-compat:28.0.0"
         api "com.github.bumptech.glide:glide:4.8.0"
-        api 'com.github.vhall.android.library:vh-saas-sdk:6.2.3'
-        api 'com.github.vhall.android.library:vh-saas-interactive:6.2.3'
+        api 'com.github.vhall.android.library:vh-saas-sdk:6.3.0'
+        api 'com.github.vhall.android.library:vh-saas-interactive:6.3.0'
         api 'com.github.vhall.android.library:vh-saas-sdk-support:2.0.1'
-
+        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
         implementation 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
         implementation 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
         implementation 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
@@ -48,6 +49,12 @@ repositories {
         implementation 'com.android.support:recyclerview-v7:28.0.0'
         api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
         api 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'
+
+        //美颜相关
+        api 'com.github.vhall.android.base:vhall-beautify-faceunity:1.1.3'
+
+        //美颜demoUI 建议自己按照自己需求实现
+        api 'com.github.vhall.android.library:vhall-beautify-kit-support:1.1.0'
 
     }
     mavenCentral()
