--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -6,8 +6,8 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 634
-        versionName "6.3.4"
+        versionCode 640
+        versionName "6.4.0"
     }
     buildTypes {
         release {
@@ -32,15 +32,15 @@ tasks.withType(JavaCompile) {
 repositories {
     dependencies {
         implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
-        implementation "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
+        api "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
 //        api "com.github.bumptech.glide:glide:4.8.0"
-
-        implementation "com.android.support:support-compat:28.0.0"
+        api 'com.alibaba:fastjson:1.2.73'
+        api "com.android.support:support-compat:28.0.0"
         api "com.github.bumptech.glide:glide:4.8.0"
-        api 'com.github.vhall.android.library:vh-saas-sdk:6.3.4'
-        api 'com.github.vhall.android.library:vh-saas-interactive:6.3.4'
+        api 'com.github.vhall.android.library:vh-saas-sdk:6.4.0'
+        api 'com.github.vhall.android.library:vh-saas-interactive:6.4.0'
         api 'com.github.vhall.android.library:vh-saas-sdk-support:2.0.1'
-        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+        api 'com.android.support.constraint:constraint-layout:2.0.2'
         implementation 'com.github.ctiao:DanmakuFlameMaster:0.6.4'
         implementation 'com.github.ctiao:ndkbitmap-armv7a:0.6.4'
         implementation 'com.github.ctiao:ndkbitmap-armv5:0.6.4'
