--- a/VhallAndroidSDKLiveDemo/build.gradle
+++ b/VhallAndroidSDKLiveDemo/build.gradle
@@ -18,6 +18,9 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
         maven {url 'http://4thline.org/m2'}
+        maven {url 'https://s01.oss.sonatype.org/content/repositories/releases/'}
+        maven {url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'}
+
 
         //美颜必须添加
         maven {
