chore(6.5.1): 6.5.1版本 增加观众参与视频轮巡，化播放器自动播放，互动增加清晰度根据互动人数自动变化，demo增加文档横竖屏切换

--- a/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/logo"
         tools:overrideLibrary="com.vhall.core"
+        tools:replace="android:allowBackup"
         android:hardwareAccelerated="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
