--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -24,9 +24,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name=".broadcast.DirectorPushActivity"
-            android:exported="false"
+            android:name=".watch.minimalist.MinimalistWatchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing" />
+
+        <activity
+            android:name=".watch.minimalist.MinimalistBaseWatchActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".broadcast.DirectorPushActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
         <activity
             android:name=".broadcast.BroadcastActivity"
@@ -45,7 +58,6 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:windowSoftInputMode="adjustNothing" />
-
         <activity
             android:name=".watch.VWatchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
