refactor(6.10.0): 增加暖场视频，回放禁言，章节打点

--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -24,12 +24,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
+            android:name=".watch.warmup.WatchBaseWarmUpActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
+            android:name=".watch.warmup.WatchWarmUpActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing" />
+        <activity
             android:name=".watch.minimalist.MinimalistWatchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing" />
-
         <activity
             android:name=".watch.minimalist.MinimalistBaseWatchActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
