--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -3,7 +3,10 @@ plugins {
     id 'kotlin-android'
     id "kotlin-kapt"
 }
-
+String getDate() {
+    Date date = new Date();
+    return date.format("yyMMddHHmmss", TimeZone.getTimeZone("GMT+08:00"))
+}
 android {
     compileSdkVersion 30
 
@@ -14,6 +17,7 @@ android {
         versionName "$app_version"
         buildConfigField 'String', 'VH_VERSION_NAME', "\"" + "$app_version" + "\""
         buildConfigField "int", 'VH_VERSION_CODE', "$versionCode"
+        buildConfigField "String", "BuildTime", "\"${getDate()}\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -59,12 +63,12 @@ dependencies {
     //扫描二维码 用于快速输入appkey等信息
     api 'com.github.vhall.android.library:vh-zxing-client:3.5.1.1'
     //可根据微吼直播官网文档版本升级
-    api 'com.github.vhall.android.library:vh-saas-sdk:6.18.0'
-    api 'com.github.vhall.android.library:vh-saas-interactive:6.18.0'
+    api 'com.github.vhall.android.library:vh-saas-sdk:6.19.0'
+    api 'com.github.vhall.android.library:vh-saas-interactive:6.19.0'
 
     //美颜相关
     api 'com.github.vhall.android.base:vhall-beautify-faceunity:1.1.7'
 
     //美颜demoUI 建议自己按照自己需求实现
-    api 'com.github.vhall.android.library:vhall-beautify-kit-support:1.1.0'
+    api 'com.github.vhall.android.library:vhall-beautify-kit-support:1.1.2'
 }
