--- a/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
+++ b/VhallAndroidSDKLiveDemo/uilibs/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:hardwareAccelerated ="true"
         tools:replace="android:allowBackup">
         <activity
             android:name=".watch.WatchLiveActivity"
@@ -52,6 +53,7 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:hardwareAccelerated ="true"
             android:windowSoftInputMode="adjustNothing" />
         <activity
             android:name=".publish.PublishActivity"
@@ -68,16 +70,16 @@
             android:name="notch.config"
             android:value="portrait|landscape" />
 
-        <receiver android:name="com.vhall.uimodule.utils.PhoneReceiver" android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.PHONE_STATE"/>
-            </intent-filter>
-        </receiver>
+<!--        <receiver android:name="com.vhall.uimodule.utils.PhoneReceiver" android:exported="false">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.PHONE_STATE"/>-->
+<!--            </intent-filter>-->
+<!--        </receiver>-->
     </application>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+<!--    <uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
     <uses-permission android:name="android.permission.BLUETOOTH" android:maxSdkVersion="30" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"  android:maxSdkVersion="30"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
+<!--    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />-->
+<!--    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />-->
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
 </manifest>
