--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -63,12 +63,16 @@ dependencies {
     //扫描二维码 用于快速输入appkey等信息
     api 'com.github.vhall.android.library:vh-zxing-client:3.5.1.1'
     //可根据微吼直播官网文档版本升级
-    api 'com.github.vhall.android.library:vh-saas-sdk:6.19.1'
-    api 'com.github.vhall.android.library:vh-saas-interactive:6.19.1'
+    api 'com.github.vhall.android.library:vh-saas-sdk:6.19.2'
+    api 'com.github.vhall.android.library:vh-saas-interactive:6.19.2'
 
     //美颜相关
     api 'com.github.vhall.android.base:vhall-beautify-faceunity:1.1.7'
 
     //美颜demoUI 建议自己按照自己需求实现
     api 'com.github.vhall.android.library:vhall-beautify-kit-support:1.1.2'
+
+    //引用弹幕库
+    implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
+    implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.21'
 }
