1. 1.22.0 新增直播推流V2版本。

--- a/VhallAndroidSDKLiveDemo/app/build.gradle
+++ b/VhallAndroidSDKLiveDemo/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 android {
     compileSdkVersion 30
     defaultConfig {
-        applicationId "com.vhall.live"
+        applicationId "com.vhall.vhlive"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 6211
