--- a/VhallAndroidSDKLiveDemo/uilibs/build.gradle
+++ b/VhallAndroidSDKLiveDemo/uilibs/build.gradle
@@ -63,8 +63,8 @@ dependencies {
     //扫描二维码 用于快速输入appkey等信息
     api 'com.github.vhall.android.library:vh-zxing-client:3.5.1.1'
     //可根据微吼直播官网文档版本升级
-    api 'com.github.vhall.android.library:vh-saas-sdk:6.28.0'
-    api 'com.github.vhall.android.library:vh-saas-interactive:6.28.0'
+    api 'com.github.vhall.android.library:vh-saas-sdk:6.29.0'
+    api 'com.github.vhall.android.library:vh-saas-interactive:6.29.0'
 
     //美颜相关
     api 'com.github.vhall.android.base:vhall-beautify-faceunity:1.1.11'
@@ -75,4 +75,10 @@ dependencies {
     //引用弹幕库
     implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
     implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.21'
+
+    //微信支付
+    api 'com.tencent.mm.opensdk:wechat-sdk-android:6.8.34'
+//    api project(':vhzxing')
+    // 支付宝 SDK AAR 包所需的配置
+    api 'com.alipay.sdk:alipaysdk-android:15.8.40'
 }
